tests/error/no_cast.gw
// [contains] no match found for operator
class C{}
class D{}

C c;
D d;
<<<c $ D>>>;
<<<d>>>;
